<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilometros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_liter">Km por litro</string>
    <string name="total_expent">Seu gasto total será de:</string>
    <string name="calculate">Calcular</string>
    <string name="total_value">R$ 0</string>
    <string name="validation_fill_all_fields">Preencha todos os campos.</string>
</resources>